--- a/.settings/com.zeroc.Slice2JavaPlugin.prefs
+++ b/.settings/com.zeroc.Slice2JavaPlugin.prefs
@@ -1,2 +1,3 @@
 ///BankAccountManager/slice/CertSigner.ice.extraArguments=-IC\:\\Progra~2\\ZeroC\\Ice-3.5.1\\slice\\Ice
 eclipse.preferences.version=1
+includes=slice;C\:/Program Files (x86)/ZeroC/Ice-3.5.1/slice/Ice
